tree-sitter-bnf/test/corpus/basics.txt
================================================================================
Literal terminal
================================================================================

expr -> 'hello';

--------------------------------------------------------------------------------

(grammar
  (rule
    name: (nonTerminal)
    body: (ruleBody
      (symbolSeq
        (symbol
          content: (literal))))))

================================================================================
Double-quoted literal terminal
================================================================================

expr -> "hello";

--------------------------------------------------------------------------------

(grammar
  (rule
    name: (nonTerminal)
    body: (ruleBody
      (symbolSeq
        (symbol
          content: (literal))))))

================================================================================
Pattern terminal
================================================================================

expr -> /[a-z]+/;

--------------------------------------------------------------------------------

(grammar
  (rule
    name: (nonTerminal)
    body: (ruleBody
      (symbolSeq
        (symbol
          content: (pattern))))))

================================================================================
Pattern terminal with flags
================================================================================

expr -> /select/i;

--------------------------------------------------------------------------------

(grammar
  (rule
    name: (nonTerminal)
    body: (ruleBody
      (symbolSeq
        (symbol
          content: (pattern))))))

================================================================================
Pattern terminal followed by non-terminal
================================================================================

expr -> /x/ b;

--------------------------------------------------------------------------------

(grammar
  (rule
    name: (nonTerminal)
    body: (ruleBody
      (symbolSeq
        (symbol
          content: (pattern))
        (symbol
          content: (nonTerminal))))))

================================================================================
Non-terminal reference
================================================================================

expr -> other;

--------------------------------------------------------------------------------

(grammar
  (rule
    name: (nonTerminal)
    body: (ruleBody
      (symbolSeq
        (symbol
          content: (nonTerminal))))))

================================================================================
Literal with escape sequences
================================================================================

expr -> '\n' '\0' '\x41' '\\' '\'';

--------------------------------------------------------------------------------

(grammar
  (rule
    name: (nonTerminal)
    body: (ruleBody
      (symbolSeq
        (symbol
          content: (literal))
        (symbol
          content: (literal))
        (symbol
          content: (literal))
        (symbol
          content: (literal))
        (symbol
          content: (literal))))))

================================================================================
Raw newline inside a literal is an error
:error
================================================================================

expr -> 'a
b';

--------------------------------------------------------------------------------
