tree-sitter-bnf/test/corpus/comments.txt
================================================================================
Comment on its own line before a rule
================================================================================

# a comment
expr -> 'a';

--------------------------------------------------------------------------------

(grammar
  (comment)
  (rule
    (nonTerminal)
    (ruleBody
      (symbolSeq
        (symbol
          (literal))))))

================================================================================
Inline comment after a rule
================================================================================

expr -> 'a'; # a comment

--------------------------------------------------------------------------------

(grammar
  (rule
    (nonTerminal)
    (ruleBody
      (symbolSeq
        (symbol
          (literal)))))
  (comment))

================================================================================
Comment between two rules
================================================================================

expr -> 'a';
# between rules
stmt -> expr;

--------------------------------------------------------------------------------

(grammar
  (rule
    (nonTerminal)
    (ruleBody
      (symbolSeq
        (symbol
          (literal)))))
  (comment)
  (rule
    (nonTerminal)
    (ruleBody
      (symbolSeq
        (symbol
          (nonTerminal))))))

================================================================================
Consecutive comments before a rule
================================================================================

# first comment
# second comment
expr -> 'a';

--------------------------------------------------------------------------------

(grammar
  (comment)
  (comment)
  (rule
    (nonTerminal)
    (ruleBody
      (symbolSeq
        (symbol
          (literal))))))

================================================================================
Inline comment after a pattern terminal
================================================================================

expr -> /[a-z]+/; # comment after pattern

--------------------------------------------------------------------------------

(grammar
  (rule
    (nonTerminal)
    (ruleBody
      (symbolSeq
        (symbol
          (pattern)))))
  (comment))
