tree-sitter-bnf/test/corpus/grammar.txt
================================================================================
Multiple rules
================================================================================

expr -> 'a';
stmt -> expr;

--------------------------------------------------------------------------------

(grammar
  (rule
    (nonTerminal)
    (ruleBody
      (symbolSeq
        (symbol
          (literal)))))
  (rule
    (nonTerminal)
    (ruleBody
      (symbolSeq
        (symbol
          (nonTerminal))))))
