tree-sitter-bnf/test/corpus/operators.txt
================================================================================
Kleene star on literal
================================================================================

expr -> 'a'*;

--------------------------------------------------------------------------------

(grammar
  (rule
    name: (nonTerminal)
    body: (ruleBody
      (symbolSeq
        (symbol
          content: (literal)
          kleene: (asterisk))))))

================================================================================
Kleene questionMark on literal
================================================================================

expr -> 'a'?;

--------------------------------------------------------------------------------

(grammar
  (rule
    name: (nonTerminal)
    body: (ruleBody
      (symbolSeq
        (symbol
          content: (literal)
          kleene: (questionMark))))))

================================================================================
Kleene plus on literal
================================================================================

expr -> 'a'+;

--------------------------------------------------------------------------------

(grammar
  (rule
    name: (nonTerminal)
    body: (ruleBody
      (symbolSeq
        (symbol
          content: (literal)
          kleene: (plus))))))

================================================================================
Kleene plus on non-terminal
================================================================================

expr -> foo+;

--------------------------------------------------------------------------------

(grammar
  (rule
    name: (nonTerminal)
    body: (ruleBody
      (symbolSeq
        (symbol
          content: (nonTerminal)
          kleene: (plus))))))

================================================================================
Kleene asterisk on non-terminal
================================================================================

expr -> foo*;

--------------------------------------------------------------------------------

(grammar
  (rule
    name: (nonTerminal)
    body: (ruleBody
      (symbolSeq
        (symbol
          content: (nonTerminal)
          kleene: (asterisk))))))

================================================================================
Kleene questionMark on non-terminal
================================================================================

expr -> foo?;

--------------------------------------------------------------------------------

(grammar
  (rule
    name: (nonTerminal)
    body: (ruleBody
      (symbolSeq
        (symbol
          content: (nonTerminal)
          kleene: (questionMark))))))
