tree-sitter-bnf/test/corpus/structure.txt
================================================================================
Alternatives
================================================================================

expr -> 'a' | 'b';

--------------------------------------------------------------------------------

(grammar
  (rule
    (nonTerminal)
    (ruleBody
      (symbolSeq
        (symbol
          (literal)))
      (symbolSeq
        (symbol
          (literal))))))

================================================================================
Sequence
================================================================================

expr -> 'a' 'b';

--------------------------------------------------------------------------------

(grammar
  (rule
    (nonTerminal)
    (ruleBody
      (symbolSeq
        (symbol
          (literal))
        (symbol
          (literal))))))

================================================================================
Sequence with alternatives
================================================================================

expr -> 'a' 'b' | 'c';

--------------------------------------------------------------------------------

(grammar
  (rule
    (nonTerminal)
    (ruleBody
      (symbolSeq
        (symbol
          (literal))
        (symbol
          (literal)))
      (symbolSeq
        (symbol
          (literal))))))

================================================================================
Grouped sub-sequence with Kleene star
================================================================================

expr -> ('a' | 'b')*;

--------------------------------------------------------------------------------

(grammar
  (rule
    (nonTerminal)
    (ruleBody
      (symbolSeq
        (symbol
          (subSeq
            (ruleBody
              (symbolSeq
                (symbol
                  (literal)))
              (symbolSeq
                (symbol
                  (literal)))))
          (asterisk))))))
