tree-sitter-bnf/test/corpus/token.txt
================================================================================
Token expression with single pattern
================================================================================

digits -> << /[0-9]+/ >>;

--------------------------------------------------------------------------------

(grammar
  (rule
    name: (nonTerminal)
    body: (ruleBody
      (symbolSeq
        (symbol
          content: (tokenExpr
            body: (ruleBody
              (symbolSeq
                (symbol
                  content: (pattern))))))))))

================================================================================
Token expression with sequence
================================================================================

identifier -> << /[A-Za-z_]/ /[A-Za-z0-9_]*/ >>;

--------------------------------------------------------------------------------

(grammar
  (rule
    name: (nonTerminal)
    body: (ruleBody
      (symbolSeq
        (symbol
          content: (tokenExpr
            body: (ruleBody
              (symbolSeq
                (symbol
                  content: (pattern))
                (symbol
                  content: (pattern))))))))))

================================================================================
Token expression with alternatives
================================================================================

sign -> << '+' | '-' >>;

--------------------------------------------------------------------------------

(grammar
  (rule
    name: (nonTerminal)
    body: (ruleBody
      (symbolSeq
        (symbol
          content: (tokenExpr
            body: (ruleBody
              (symbolSeq
                (symbol
                  content: (literal)))
              (symbolSeq
                (symbol
                  content: (literal))))))))))

================================================================================
Token expression with Kleene plus
================================================================================

digits -> << /[0-9]/ >>+;

--------------------------------------------------------------------------------

(grammar
  (rule
    name: (nonTerminal)
    body: (ruleBody
      (symbolSeq
        (symbol
          content: (tokenExpr
            body: (ruleBody
              (symbolSeq
                (symbol
                  content: (pattern)))))
          kleene: (plus))))))

================================================================================
Token expression with literal
================================================================================

kw_if -> << 'if' >>;

--------------------------------------------------------------------------------

(grammar
  (rule
    name: (nonTerminal)
    body: (ruleBody
      (symbolSeq
        (symbol
          content: (tokenExpr
            body: (ruleBody
              (symbolSeq
                (symbol
                  content: (literal))))))))))
